<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_memo"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_new_memo"
        android:shortcutLongLabel="@string/shortcut_new_memo_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.thuvstu.personalencyclopedia"
            android:targetClass="com.thuvstu.personalencyclopedia.MainActivity">
            <extra
                android:name="shortcut"
                android:value="new_memo" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.thuvstu.personalencyclopedia"
            android:targetClass="com.thuvstu.personalencyclopedia.MainActivity">
            <extra
                android:name="shortcut"
                android:value="search" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="review"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_review"
        android:shortcutLongLabel="@string/shortcut_review_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.thuvstu.personalencyclopedia"
            android:targetClass="com.thuvstu.personalencyclopedia.MainActivity">
            <extra
                android:name="shortcut"
                android:value="review" />
        </intent>
    </shortcut>
</shortcuts>
